# microservice

./: HISTORY.md  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-tests.yml
default/: Dockerfile  README.md  config.yml  pyproject.toml  setup.cfg
default/src/: __init__.py  aggregates.py  cli.py  controllers.py  dto.py  sagas.py  services.py
default/src/default/: __init__.py  aggregates.py  controllers.py  dto.py
docs/: Makefile  conf.py  index.rst  make.bat  usage.rst
minos/microservice/: __init__.py  __main__.py  cli.py  constants.py  injectors.py  launchers.py  services.py
minos/microservice/entrypoint/: __init__.py  launcher.py
minos/template/: __init__.py  injectors.py  launchers.py
minos/template/entrypoint/: launcher.py
tests/: __init__.py  config.yml
tests/order/: __init__.py  aggregates.py
tests/order/services/: __init__.py  command.py  cqrs.py  rest.py  saga.py
tests/test_microservice/: test_cli.py  test_injectors.py  test_launchers.py
tests/test_microservice/test_cli/: test_cli.py
tests/test_microservice/test_entrypoint/: test_launcher.py
tests/test_template/: test_launchers.py
tests/test_template/test_entrypoint/: test_launcher.py
