[tool.poetry]
name = "minos_microservice"
version = "0.0.1"
description = "Python package whose purpose is to connect and orchestrate the functionality among all the minos modules."
readme = "README.md"
repository = "https://github.com/clariteia/minos_microservice"
homepage = "https://clariteia.com"
authors = ["Clariteia Devs <devs@clariteia.com>"]
license = "MIT"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
keywords = [
    "clariteia",
    "minos",
    "microservice",
    "saga",
]
packages = [
    { include = "minos" }
]
include = [
    "AUTHORS.md",
    "HISTORY.md",
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"
minos-microservice-common = "^0.0"
minos-microservice-networks = { git = "git@github.com:Clariteia/minos_microservice_networks", rev = "2ff2c8baf9e6727bf1077b2e83842e513ef59f39" }
minos-microservice-saga = { git = "git@github.com:Clariteia/minos_microservice_saga", rev = "eda8b5ebdc4b469a697eac3d64e8dd49df1a0e62" }
cached-property = "^1.5.2"

[tool.poetry.dev-dependencies]
black = "^19.10b"
isort = "^5.8.0"
pytest = "^6.2.4"
coverage = "^5.5"
flake8 = "^3.9.2"
Sphinx = "^4.0.1"
pre-commit = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
