[tool.poetry]
name = "minos_microservice"
version = "0.0.1"
description = "Python package whose purpose is to connect and orchestrate the functionality among all the minos modules."
readme = "README.md"
repository = "https://github.com/clariteia/minos_microservice"
homepage = "https://clariteia.com"
authors = ["Clariteia Devs <devs@clariteia.com>"]
license = "MIT"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
keywords = [
    "clariteia",
    "minos",
    "microservice",
    "saga",
]
packages = [
    { include = "minos" }
]
include = [
    "AUTHORS.md",
    "HISTORY.md",
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"
minos-microservice-common = "^0.0"
minos-microservice-networks = { git = "git@github.com:Clariteia/minos_microservice_networks", rev = "c7e6208d4c3a0667e1cc58a519e69eb36c47c0d4" }
minos-microservice-saga = { git = "git@github.com:Clariteia/minos_microservice_saga", rev = "f59ee0cc8790ace75a30f5ed15d46d9505256848" }
cached-property = "^1.5.2"

[tool.poetry.dev-dependencies]
black = "^19.10b"
isort = "^5.8.0"
pytest = "^6.2.4"
coverage = "^5.5"
flake8 = "^3.9.2"
Sphinx = "^4.0.1"
pre-commit = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
